# tp_hw_1

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  solution_1.cpp  solution_2.cpp  solutions.cpp
